[package]
authors     = { workspace = true }
categories  = ["development-tools"]
description = "Scripting library for deploying and interacting with CosmWasm smart-contracts"
edition     = { workspace = true }
keywords    = ["cosmwasm", "blockchain"]
license     = { workspace = true }
name        = "cw-orch-interchain"
repository  = { workspace = true }
version     = "0.9.0"

exclude = [".env"]

[package.metadata.docs.rs]
# passes all-features to cargo when building the docs.
all-features = true

[features]
default = []
# enable the optional dependencies
daemon = ["cw-orch-interchain-core/daemon", "dep:cw-orch-interchain-daemon", "dep:cw-orch-starship"]


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]

cw-orch-interchain-core     = { workspace = true }
cw-orch-interchain-daemon   = { workspace = true, optional = true }
cw-orch-interchain-mock     = { workspace = true }
cw-orch-starship            = { workspace = true, optional = true }
ibc-relayer-types.workspace = true

#Used only for testing
cosmwasm-std.workspace = true
cw1                    = "2.0.0"
cw1-whitelist          = "2.0.0"
speculoos.workspace    = true

[dev-dependencies]
clap                        = { version = "4.5.16", features = ["derive"] }
cosmos-sdk-proto            = { workspace = true }
cw-orch                     = { workspace = true, features = ["daemon"] }
cw-orch-interchain          = { path = ".", features = ["daemon"] }
dotenv                      = "0.15.0"
env_logger                  = "0.11.5"
ibc-proto                   = { workspace = true }
ibc-relayer-types.workspace = true
log.workspace               = true
pretty_env_logger           = "0.5.0"
prost-types                 = { workspace = true }
simple-ica-controller       = { git = "https://github.com/Buckram123/cw-ibc-demo.git", rev = "2cc3c14" }
simple-ica-host             = { git = "https://github.com/Buckram123/cw-ibc-demo.git", rev = "2cc3c14" }
speculoos.workspace         = true
tokio                       = "1.39.2"
