[package]
name = "cw-orch"
version = "0.20.0"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "Scripting library for deploying and interacting with CosmWasm smart-contracts"
keywords = ["cosmwasm", "blockchain"]
categories = ["development-tools"]
readme = "README.md"

exclude = [".env"]

[package.metadata.docs.rs]
# passes all-features to cargo when building the docs.
all-features = true

[[example]]
name = "mock_test"

[[example]]
name = "local_daemon"
required-features = ["daemon"]

[[example]]
name = "testnet_daemon"
required-features = ["daemon"]

[[example]]
name = "osmosis_test_tube"
required-features = ["osmosis-test-tube"]

[[example]]
name = "complex_osmosis_test_tube"
required-features = ["osmosis-test-tube"]

[[example]]
name = "injective"
required-features = ["eth"]

[[example]]
name = "bank_query"
path = "examples/queries/bank_query.rs"
required-features = ["daemon"]

[[example]]
name = "testnet_queries"
path = "examples/queries/testnet_queries.rs"
required-features = ["daemon"]

[features]
default = []
# enable the optional dependencies
daemon = [
  "dep:tokio",
  # "dep:tonic",
  "dep:cosmrs",
  "dep:cw-orch-daemon",
  "dep:cw-orch-networks",
]
eth = ["daemon", "cw-orch-core/eth", "cw-orch-daemon?/eth"]
osmosis-test-tube = [
  "dep:osmosis-test-tube",
  "dep:osmosis-std",
  "dep:prost",
  "dep:prost-types",
  "dep:cosmrs",
]
snapshot-testing = ["dep:insta"]


[dependencies]
# Default deps
cw-orch-contract-derive = { workspace = true }
cw-orch-fns-derive = { workspace = true }

cosmwasm-std = { workspace = true }
cw-utils = { workspace = true }
cw-multi-test = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
schemars = "0.8.10"
log = { workspace = true }
thiserror = { workspace = true }

# Daemon deps
cw-orch-daemon = { workspace = true, optional = true }
cw-orch-networks = { workspace = true, optional = true }
tokio = { version = "1.4", features = ["full"], optional = true }
cosmrs = { version = "0.15.0", features = [
  "dev",
  "cosmwasm",
  "grpc",
], optional = true }

# Live mock deps
tonic = { workspace = true, optional = true, features = ["tls", "tls-roots"] }

# Test Tube env deps
osmosis-test-tube = { workspace = true, optional = true }
osmosis-std = { version = "=0.21.0", optional = true }
prost-types = { workspace = true, optional = true }
prost = { workspace = true, optional = true }

# Env deps
cw-orch-core = { workspace = true }
cw-orch-traits = { workspace = true }
cw-orch-mock = { workspace = true }

# Snapshot deps
insta = { version = "1.34.0", features = ["yaml"], optional = true }
sanitize-filename = "0.5.0"
hex = "0.4.3"

[dev-dependencies]
cw-orch = { features = ["daemon", "snapshot-testing"], path = "." }
env_logger = "0.11.2"
cosmwasm-schema = "1.2"
counter-contract = { path = "../contracts/counter", features = ["interface"] }
mock-contract = { path = "../contracts/mock_contract", features = [
  "interface",
] }
mock-contract-u64 = { path = "../contracts/mock_contract_u64", features = [
  "interface",
] }
serde_json = { workspace = true }
dotenv = "0.15.0"
