[package]
name = "cw-plus-script"
version = "0.1.0"
authors = ["CyberHoward"]
edition = "2018"

[dependencies]
cosm-script = {path ="../cosm-script"}
cosmwasm-std = { version = "1.0" }
cw20 = "0.13"
cw20-base = "0.13"
anyhow="1.0"

[dev-dependencies]
tokio = "1.19.1"
dotenv="0.15.0"
env_logger = "0.9.0"
log="0.4.14"
