[package]
name = "cw-plus-script"
version = "0.1.0"
authors = ["CyberHoward <cyberhoward@protonmail.com>"]
edition = "2021"
description = "CosmWasm-plus scripting interfaces"
license = "Apache-2.0"
repository = "https://github.com/CyberHoward/cosm-rust-script"
keywords = ["cosmwasm", "blockchain"]
readme = "README.md"

exclude = [
    ".env",
    "default_store.json"
]

[dependencies]
cosm-script = "0.1"
cosmwasm-std = { version = "1.0" }
cw20 = "0.13"
cw20-base = "0.13"
anyhow="1.0"

[patch.crates-io]
cosm-script = {path ="../cosm-script"}

[dev-dependencies]
tokio = "1.19.1"
dotenv="0.15.0"
env_logger = "0.9.0"
log="0.4.14"
