[package]
name = "boot-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
exclude = [
    ".env",
]

[dependencies]
boot-core = {git = "https://github.com/Abstract-OS/BOOT"}
serde = "1.0"
log="0.4.14"
env_logger = "0.8.3"
anyhow="1.0"
dotenv="0.15.0"

