[package]
name = "counter-contract"
version = "0.11.0"
description = "counter constract"
keywords = ["cosmwasm", "blockchain"]
edition = { workspace = true }
exclude = [".env"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["export"]
export = []
interface = ["dep:cw-orch"]

[dependencies]
cosmwasm-std = { workspace = true }
cw-storage-plus = "1.0"
cw2 = "1.0"
cosmwasm-schema = "1.2"
schemars = "0.8.10"
thiserror = { version = "1.0.21" }
serde = { workspace = true }
serde_json = "1.0.79"
cw-orch = { path = "../../cw-orch", optional = true }

strum = { version = "0.25", features = ["derive"] }
cw-orch-cli = { path = "../../packages/cw-orch-cli" }

[dev-dependencies]
cw-multi-test = { workspace = true }
counter-contract = { path = ".", features = ["interface"] }
# Deps for deployment
dotenv = { version = "0.15.0" }
env_logger = { version = "0.10.0" }
cw-orch = { path = "../../cw-orch", features = ["daemon", "osmosis-test-tube"] }
