[package]
name = "counter-contract"
version = "0.11.0"
description = "counter constract"
keywords = ["cosmwasm", "blockchain"]
edition = { workspace = true }
exclude = [".env"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["export"]
export = []

[dependencies]
cosmwasm-std = { workspace = true }
cw-storage-plus = "1.0"
cw2 = "1.0"
cosmwasm-schema = "1.2"
schemars = "0.8.10"
thiserror = { version = "1.0.21" }
serde = { workspace = true }
serde_json = "1.0.79"
cw-orch = { path = "../../cw-orch", features = ["daemon"] }
# Unused, only there to check for wasm compatibility
cw-orch-interchain = { path = "../../cw-orch-interchain", features = [
  "daemon",
] }

[[example]]
name = "deploy"

[dev-dependencies]
# Deps for deployment
dotenv = { version = "0.15.0" }
pretty_env_logger = { version = "0.5.0" }
cw-orch = { path = "../../cw-orch", features = ["daemon"] }
cw-orch-osmosis-test-tube = { workspace = true }
anyhow = { workspace = true }

# Clone Testing test
cw-orch-clone-testing = { workspace = true }
cw20 = { workspace = true }
cw20-base = { workspace = true }
log = { workspace = true }

# Benchmark
criterion = { version = "0.5" }
