[package]
name = "generic-msg"
version = "0.1.0"
description = "Mock constract for cw-orch macro testing"
keywords = ["cosmwasm", "blockchain"]
edition = { workspace = true }

exclude = [".env"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["export"]
export = []
interface = []

[dependencies]
cosmwasm-std = { workspace = true }
serde = { workspace = true }
schemars = "0.8.10"
serde_json = "1.0.79"
thiserror = { version = "1.0.21" }
cosmwasm-schema = "1.2"
# This version should not be a path dependency and be kept to the last cw-orch version (beyond v0.23)
# Keeping a different package until v0.23 to avoid package conflicts
cw-orch = { version = "0.23", features = ["daemon"] }
# cw-orch = { path = "../../cw-orch", features = ["daemon"] }
