[package]
name = "mock-contract"
version = "0.11.0-alpha.5"
description = "Mock constract for interface_entry_point macro testing"
keywords = ["cosmwasm", "blockchain"]

exclude = [".env"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["export"]
export = []
cw-orch = ["dep:cw-orch"]

[dependencies]
cosmwasm-std = { workspace = true }
serde = { workspace = true }
schemars = "0.8.10"
log = "0.4.14"
serde_json = "1.0.79"
thiserror = { version = "1.0.21" }

cosmwasm-schema = "1.2"

cw-orch = {path = "../../cw-orch", features=["daemon"], optional=true}
anyhow.workspace = true

[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false

