[package]
name = "mock-contract-u64"
version = "0.1.0"
description = "Mock constract for cw-orch macro testing"
keywords = ["cosmwasm", "blockchain"]
edition = { workspace = true }

exclude = [".env"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["export"]
export = []
cw-orch = ["dep:cw-orch"]

[dependencies]
cosmwasm-std = { workspace = true }
serde = { workspace = true }
schemars = "0.8.10"
log = "0.4.14"
serde_json = "1.0.79"
thiserror = { version = "1.0.21" }

cosmwasm-schema = "1.2"

cw-orch = { path = "../../cw-orch", features = ["daemon"], optional = true }
anyhow.workspace = true

mock-contract = { path = "../mock_contract", default-features = false }
