[package]
name = "quick_start"
version = "1.0.0"
publish = false
authors = ["BHIKTOR <victor@abstract.money>"]
edition = "2021"
license = { workspace = true }

[dependencies]
cosmwasm-std = { workspace = true }
cw-multi-test = { workspace = true }
cw-storage-plus = "1.0.1"
tokio = { version = "1.4", features = ["full"] }
serde = { workspace = true, default-features = false, features = ["derive"] }
cw-orch = { git = "https://github.com/AbstractSDK/cw-orchestrator.git", features = ["daemon"] }
cw2 = { git = "https://github.com/AbstractSDK/cw-plus.git" }
cosmwasm-schema = "1.2"
log = "0.4.14"
env_logger = "0.10.0"
pretty_env_logger = "0.4"
dotenvy = "0.15"
thiserror = "1"