[package]
description = "Mock constract for cw-orch macro testing"
edition     = { workspace = true }
keywords    = ["cosmwasm", "blockchain"]
name        = "cw-orch-compatibility-test"
version     = "0.1.0"

exclude = [".env"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default   = ["export"]
export    = []
interface = []

[dependencies]
cosmwasm-schema = "2.0"
cosmwasm-std    = { workspace = true }
schemars        = "0.8.10"
serde           = { workspace = true }
serde_json      = "1.0.79"
thiserror       = { version = "1.0.21" }
# This version should not be a path dependency and be kept to the last cw-orch version (beyond v0.23)
# Keeping a different package until v0.23 to avoid package conflicts
cw-orch = { package = "aaa-test-cw-orch", version = "0.25" }
# Keep the old-cw-orch version to 0.22 for backwards compatibility
old-cw-orch = { package = "cw-orch", version = "0.24" }
