[package]
name = "mock-contract"
version = "0.1.0"
description = "Mock constract for cw-orch macro testing"
keywords = ["cosmwasm", "blockchain"]
edition = { workspace = true }

exclude = [".env"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["export"]
export = []
interface = []

[dependencies]
cosmwasm-std = { workspace = true }
cw2 = { version = "2.0.0" }
serde = { workspace = true }
schemars = "0.8.21"
serde_json = "1.0.125"
thiserror = { version = "1.0.63" }
cosmwasm-schema = "2.1"
cw-orch = { workspace = true }
cw-storage-plus = { workspace = true }
